--- a/Proyecto/style.css
+++ b/Proyecto/style.css
@@ -1,23 +1,24 @@
+/* Reset del CSS */
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
+/* declaración de las variables con alcance global */
 :root {
-    --primary: #ffe259;
-    --dark: #0F2027;
+    --primary: linear-gradient(210deg,#fceabb,#f8b500);
+    --dark:linear-gradient(#FFA17F, #00223E) ;
     --light:#FFFFFF;
     --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
 }
 
-html{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+html {
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: var(--dark);
 }
 
 body {
-    background: #f5af19;
+    background:#fdf4de;
     margin: 30px 50px;
     line-height: 1.4;
 }
@@ -27,7 +28,9 @@ body {
     color: var(--light);
     padding: 0.6rem 1.3rem;
     text-decoration: none;
+    border-radius: 1rem;
     border: 0;
+    animation: pulse 3s infinite;
 }
 
 img {
@@ -40,13 +43,6 @@ img {
 }
 
 /* Navegación */
-/* .main-nav{
-    position: fixed;
-    width: 100%;
-    justify-items: center;
-    justify-content: center;
-} */
-
 .main-nav ul {
     display: grid;
     grid-gap: 20px;
@@ -61,6 +57,7 @@ img {
     text-decoration: none;
     padding: 0.8rem;
     text-align: center;
+    border-radius: 1rem;
     color: var(--dark);
     text-transform: uppercase;
     font-size: 1.1rem;
@@ -80,7 +77,7 @@ img {
       'showcase showcase top-box-b';
 }
 
-/* Showcase */
+/* Showcase (la vitrina de la web)*/
 .showcase {
     grid-area: showcase;
     min-height: 400px;
@@ -98,13 +95,13 @@ img {
 .showcase h1 {
     font-size: 4rem;
     margin-bottom: 0;
-    color:var(--light);
+    color:var(--dark);
 }
 
 .showcase p {
     font-size: 1.3rem;
     margin-top: 0;
-    color:var(--light);
+    color:var(--dark);
 }
 /* Top Box */
 .top-box {
@@ -128,7 +125,7 @@ img {
 .boxes {
     display: grid;
     grid-gap: 20px;
-    grid-template-columns: repeat(auto-fit, minmax (200px, 1fr));
+    grid-template-columns: repeat(3, 1fr);
 }
 
 .box {
@@ -137,7 +134,6 @@ img {
     padding: 1.5rem 2rem;
     box-shadow: var(--shadow);
 }
-
 /* Información */
 .info {
     background: var(--primary);
@@ -147,8 +143,9 @@ img {
 
 .info h2 {
     font-size: 2.5rem;
-    margin-bottom: 0;
-    color:var(--light);
+    margin-bottom: 15px;
+    color:var(--dark);
+    text-align: center;
 }
 
 .info ul {
@@ -159,6 +156,7 @@ img {
     grid-template-areas:
       'li li li'
       'li li li';
+      font-size: .75rem;
 }
 
 /* Contacto */
@@ -167,10 +165,14 @@ img {
     font-size: 2.5rem;
     text-align: center;
     margin-bottom: 0;
-    color:var(--light);
+    color:var(--dark);
 }
-
-.incons-media a {
+.contact {
+    display: grid;
+    grid-template-columns: 3fr;
+    justify-items: center;
+}
+.incons-media img {
     width: 60px;
     transition: 0.5s;
 }
@@ -187,6 +189,7 @@ footer {
 }
 
 /* Media Queries */
+/* Responsividad de la web */
 @media (max-width: 900px) {
     .top-container {
         grid-template-areas: 
